--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Crime'
 - !lcc 'HV'
 - !lcsh 'Criminals'
+- GITenberg
 title: Crime and Its Causes
 url: http://www.gutenberg.org/ebooks/15803
